Adding org.luwrian.vk2.layouts